--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -36,7 +36,6 @@ jobs:
         VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
        run: |
         npm install --global vercel
-        vercel pull --yes --environment=production --token=$VERCEL_TOK
-        EN
+        vercel pull --yes --environment=production --token=$VERCEL_TOKEN
         vercel build --prod --token=$VERCEL_TOKEN
         vercel deploy --prebuilt --prod --token=$VERCEL_TOKEN
